<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:key="pref_autocorrect_level"
        app:title="@string/pref_autocorrect_level"
        app:entries="@array/autocorrect_entries"
        app:entryValues="@array/autocorrect_values"
        app:defaultValue="2"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="pref_undo_autocorrect"
        app:title="@string/pref_undo_autocorrect"
        app:summary="@string/pref_undo_autocorrect_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="pref_split_words"
        app:title="@string/pref_split_words"
        app:summary="@string/pref_split_words_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="pref_next_word"
        app:title="@string/pref_next_word"
        app:summary="@string/pref_next_word_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        app:title="@string/prefs_punctuation"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="pref_auto_caps"
            app:title="@string/pref_auto_caps"
            app:summary="@string/pref_auto_caps_desc"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="pref_smart_punctuation"
            app:title="@string/pref_smart_punctuation"
            app:summary="@string/pref_smart_punctuation_desc"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="pref_profanity"
            app:title="@string/pref_profanity_allow"
            app:summary="@string/pref_profanity_desc"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
