<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="screen_languages"
        app:title="@string/prefs_languages"
        app:summary="@string/prefs_languages_summary"
        app:iconSpaceReserved="false"
        app:fragment="org.rynk.keyboard.LanguagesSettingsFragment" />
    <Preference
        app:key="screen_typing"
        app:title="@string/prefs_typing"
        app:summary="@string/prefs_typing_summary"
        app:iconSpaceReserved="false"
        app:fragment="org.rynk.keyboard.TypingSettingsFragment" />
    <Preference
        app:key="screen_appearance"
        app:title="@string/prefs_appearance"
        app:summary="@string/prefs_appearance_summary"
        app:iconSpaceReserved="false"
        app:fragment="org.rynk.keyboard.AppearanceSettingsFragment" />
    <Preference
        app:key="screen_dictionary"
        app:title="@string/prefs_dictionary"
        app:summary="@string/prefs_dictionary_summary"
        app:iconSpaceReserved="false"
        app:fragment="org.rynk.keyboard.DictionarySettingsFragment" />
    <Preference
        app:key="screen_privacy"
        app:title="@string/prefs_privacy"
        app:summary="@string/prefs_privacy_summary"
        app:iconSpaceReserved="false"
        app:fragment="org.rynk.keyboard.PrivacySettingsFragment" />
    <Preference
        app:key="screen_about"
        app:title="@string/prefs_about"
        app:iconSpaceReserved="false"
        app:fragment="org.rynk.keyboard.AboutSettingsFragment" />
</PreferenceScreen>
