<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:key="pref_theme"
        app:title="@string/pref_theme"
        app:entries="@array/theme_entries"
        app:entryValues="@array/theme_values"
        app:defaultValue="1"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SeekBarPreference
        app:key="pref_height_percent"
        app:title="@string/pref_height"
        app:min="80"
        android:max="130"
        app:seekBarIncrement="5"
        app:defaultValue="100"
        app:showSeekBarValue="true"
        app:iconSpaceReserved="false"
        xmlns:android="http://schemas.android.com/apk/res/android" />
    <PreferenceCategory
        app:title="@string/prefs_layout"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="pref_number_row"
            app:title="@string/pref_number_row"
            app:summary="@string/pref_number_row_desc"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
        <ListPreference
            app:key="pref_one_handed"
            app:title="@string/pref_one_handed"
            app:entries="@array/one_handed_entries"
            app:entryValues="@array/one_handed_values"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="pref_voice_key"
            app:title="@string/pref_voice_key"
            app:summary="@string/pref_voice_key_desc"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <SwitchPreferenceCompat
        app:key="pref_popup"
        app:title="@string/pref_popup"
        app:summary="@string/pref_popup_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        app:title="@string/pref_category_feedback"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="pref_haptics"
            app:title="@string/pref_haptics"
            app:summary="@string/pref_haptics_desc"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SeekBarPreference
            app:key="pref_haptic_strength"
            app:title="@string/pref_haptic_strength"
            app:dependency="pref_haptics"
            app:min="1"
            android:max="100"
            app:defaultValue="60"
            app:iconSpaceReserved="false"
            xmlns:android="http://schemas.android.com/apk/res/android" />
        <SwitchPreferenceCompat
            app:key="pref_sound"
            app:title="@string/pref_sound"
            app:summary="@string/pref_sound_desc"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
        <SeekBarPreference
            app:key="pref_sound_volume"
            app:title="@string/pref_sound_volume"
            app:dependency="pref_sound"
            app:min="1"
            android:max="100"
            app:defaultValue="40"
            app:iconSpaceReserved="false"
            xmlns:android="http://schemas.android.com/apk/res/android" />
    </PreferenceCategory>
</PreferenceScreen>
