<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="action_add_word"
        app:title="@string/btn_add_word"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="action_view_words"
        app:title="@string/pref_user_dict_title"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        app:title="@string/prefs_backup"
        app:iconSpaceReserved="false">
        <Preference
            app:key="action_export_words"
            app:title="@string/pref_export_words"
            app:summary="@string/pref_export_words_desc"
            app:iconSpaceReserved="false" />
        <Preference
            app:key="action_import_words"
            app:title="@string/pref_import_words"
            app:summary="@string/pref_import_words_desc"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
