<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:key="pref_clipboard_chip"
        app:title="@string/pref_clipboard_chip"
        app:summary="@string/pref_clipboard_chip_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="pref_adaptive_learning"
        app:title="@string/pref_adaptive_learning"
        app:summary="@string/pref_adaptive_learning_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="action_clear_learned"
        app:title="@string/btn_clear_adaptive_data"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="privacy_note"
        app:summary="@string/privacy_note"
        app:selectable="false"
        app:iconSpaceReserved="false" />
</PreferenceScreen>
