<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="action_languages"
        app:title="@string/btn_languages"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        app:title="@string/prefs_gestures"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="pref_space_swipe_language"
            app:title="@string/pref_space_swipe_language"
            app:summary="@string/pref_space_swipe_language_desc"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="pref_backspace_swipe_word"
            app:title="@string/pref_backspace_swipe_word"
            app:summary="@string/pref_backspace_swipe_word_desc"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <ListPreference
            app:key="pref_double_space"
            app:title="@string/pref_double_space"
            app:entries="@array/double_space_entries"
            app:entryValues="@array/double_space_values"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
